--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Фентезійний Світ</title>
+    <title>EpicStudio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,6 +20,7 @@
 
     <section class="intro">
         <h2>Ласкаво просимо на офіціальний сайт EpicStudio</h2>
+        <img src="logo.jpg">
     </section>
 
     <footer>
