--- a/index2.html
+++ b/index2.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Персонажі</title>
+    <title>Учасники в команді</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -13,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Головна</a></li>
-            <li><a href="game.html">Міні-гра</a></li>
+            <li><a href="index2.html">Учасники в команді</a></li>
         </ul>
     </nav>
 </header>
@@ -35,7 +36,7 @@
         </div>
     </div>
 </section>
-
+<p>Також нам потрібні учасники подробниці <a href="https://t.me/EpicStudioRoblox">тут</a></p>
 <footer>
     <p>EpicStudo</p>
 </footer>
